--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "solhint": "solhint contracts/**/*.sol"
   },
   "dependencies": {
-    "ethers": "~5.7.2",
+    "ethers": "^6.7.1",
     "secp256k1": "^5.0.0"
   },
   "devDependencies": {
     "@masa-finance/masa-contracts-identity": "^1.9.1",
     "@masa-finance/masa-sdk": "^3.7.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-solhint": "^3.0.1",
