--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "solhint": "solhint contracts/**/*.sol"
   },
   "dependencies": {
+    "@noble/curves": "^1.2.0",
+    "@noble/secp256k1": "^2.0.0",
+    "argon2": "^0.31.1",
+    "elliptic": "^6.5.4",
     "ethers": "^6.7.1",
     "secp256k1": "^5.0.0"
   },
