--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "rootDirs": ["./test"],
     "forceConsistentCasingInFileNames": true,
     "useUnknownInCatchVariables": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "skipLibCheck": true
   },
   "include": [
     // "./typechain",
@@ -18,10 +19,6 @@
     "./test",
     "./scripts"
   ],
-  "exclude": [
-    "./node_modules/*"
-  ],
-  "files": [
-    "./hardhat.config.ts"
-  ]
+  "exclude": ["./node_modules/*"],
+  "files": ["./hardhat.config.ts"]
 }
